[build-system]
requires = [ "flit_core >=3.11,<4" ]
build-backend = "flit_core.buildapi"


[project]
name = "provider-fictional-tech"
version = "1.0.0"
description = "A demo variant plugin"
dependencies = [ ]


[project.entry-points.variant_plugins]
provider_fictional_tech = "provider_fictional_tech.plugin:FictionalTechPlugin"
